@@ -425,7 +425,8 @@ serving <- groundbeef$serving
 (f7 <- fitdist(serving, "weibull", method="mge", gof="AD2L"))
 (f8 <- fitdist(serving, "weibull", method="mge", gof="AD2"))
 cdfcomp(list(f1, f2, f3, f4, f5, f6, f7, f8))
-cdfcomp(list(f1, f2, f3, f4, f5, f6, f7, f8), xlogscale=TRUE, xlim=c(8, 250), verticals=TRUE)
+cdfcomp(list(f1, f2, f3, f4, f5, f6, f7, f8), 
+  xlogscale=TRUE, xlim=c(8, 250), verticals=TRUE)
 denscomp(list(f1, f2, f3, f4, f5, f6, f7, f8))
 
 # (13) Fit of a uniform distribution using maximum likelihood 
